apps/sikademo/example_from_manifests/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: main
          image: ghcr.io/sikalabs/hello-world-server:cloud-native-bratislava
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
