apps/sikademo/example_from_manifests/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example-from-manifests.k8s.sikademo.com
      secretName: example-from-manifests.k8s.sikademo.com
  rules:
    - host: example-from-manifests.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
